syntax = "proto3";
package measurement;
import "./room.proto";

// 測定値の種類
enum MeasurementType {
    TEMPERATURE       = 0;  // 温度
    HUMIDITY          = 1;  // 湿度
    AIR_PRESSURE      = 2;  // 気圧
    CO2_CONCENTRATION = 3;  // CO2濃度
}

// 測定値メッセージの定義
message Measurement {
    room.RoomNumbers room_number = 0;  // 部屋番号
    string type = 1;  // 測定値の種類
    float value = 2;  // 実際の測定値
    int64 datetime = 3;  // 測定した時間(unix_time)
}

service SendMeasurement {
    
}